re PR rtl-optimization/37408 (Invalid insn scheduling)

PR rtl-optimization/37408
	* function.c (assign_parm_find_stack_rtl): Set correct MEM_SIZE
	if parm is promoted.

From-SVN: r140172